@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>de.lexasoft</groupId>
 		<artifactId>mandelbrot</artifactId>
-		<version>0.1.4.02</version>
+		<version>0.1.5-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
@@ -31,4 +31,19 @@
 				<scope>test</scope>
 			</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<compilerArgs>
+                        <arg>--add-modules</arg>
+                        <arg>java.se,java.desktop</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
